--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 PORT=4001
 DB_CNN=mongodb+srv://kiyomaru078:Kiyomaru.12078@rticketsapp.woiqpf2.mongodb.net/r_tickets_app
 SECRET_JWT_SEED=EyLKiYoMaRuMuGeTsu@*12078
+MJ_APIKEY_PUBLIC=0b5531d8832bd5766ce9772b6ed91ffe
+MJ_APIKEY_PRIVATE=be4aa802e2072c211bb18ab00e4d3cb7
