--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.4",
     "mongoose": "^6.8.0",
+    "node-mailjet": "^6.0.2",
     "nodemon": "^2.0.20"
   }
 }
