--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "b": "^2.0.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "d": "^1.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-validator": "^6.14.2",
@@ -20,6 +22,8 @@
     "moment": "^2.29.4",
     "mongoose": "^6.8.0",
     "node-mailjet": "^6.0.2",
-    "nodemon": "^2.0.20"
+    "node-xlsx": "^0.21.0",
+    "nodemon": "^2.0.20",
+    "xlsx": "^0.18.5"
   }
 }
